fixed little white margin on the right on mobile

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -80,7 +80,7 @@
 @media only screen and (max-width: 768px) {
   .card {
     flex-direction: column;
-    height: 90vh;
+    height: 110vh;
     margin: 0 auto 0;
   }
   .card p {
