--- a/src/css/timeline.css
+++ b/src/css/timeline.css
@@ -39,7 +39,7 @@
 
 /* Styles for the components within the timeline */
 .timeline-component {
-    margin: 0px 20px 20px 20px;
+    margin: 0px 0px 20px 0px;
 }
 
 /* Styles for the circle element of the timeline */
